--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "react-native",
-  "version": "0.8.0",
-  "description": "A framework for building native apps using React",
+  "version": "0.1.0",
+  "name": "@exponent/rex",
   "license": "BSD-3-Clause",
+  "description": "REX is a tool that takes your JavaScript source files and serves a bundle that you deploy to clients.",
   "repository": {
     "type": "git",
-    "url": "git@github.com:facebook/react-native.git"
+    "url": "git@github.com:exponentjs/rex.git"
+  },
+  "main": "src/packager.js",
+  "engines": {
+    "node": ">=4"
   },
   "jest": {
-    "scriptPreprocessor": "jestSupport/preprocessor.js",
     "setupEnvScriptFile": "jestSupport/env.js",
     "testPathIgnorePatterns": [
       "/node_modules/"
@@ -17,76 +20,43 @@
       "js"
     ],
     "unmockedModulePathPatterns": [
-      "promise",
       "source-map"
     ]
   },
-  "main": "Libraries/react-native/react-native.js",
-  "files": [
-    "React",
-    "React.podspec",
-    "Libraries",
-    "packager",
-    "cli.js",
-    "local-cli",
-    "init.sh",
-    "LICENSE",
-    "PATENTS",
-    "README.md",
-    "jestSupport",
-    ".flowconfig"
-  ],
   "scripts": {
-    "test": "NODE_ENV=test jest",
-    "lint": "eslint Examples/ Libraries/",
-    "start": "./packager/packager.sh || true"
-  },
-  "bin": {
-    "react-native-start": "packager/packager.sh"
+    "test": "jest",
+    "lint": "eslint src",
+    "start": "src/packager.sh"
   },
   "dependencies": {
     "absolute-path": "^0.0.0",
-    "babel": "^5.8.23",
     "babel-core": "^5.8.23",
     "bser": "^1.0.2",
     "chalk": "^1.1.1",
     "connect": "^2.8.3",
     "debug": "^2.2.0",
-    "event-target-shim": "^1.0.5",
     "fbjs-scripts": "^0.2.1",
     "graceful-fs": "^4.1.2",
     "image-size": "^0.3.5",
-    "immutable": "^3.7.5",
     "joi": "^6.6.1",
-    "jstransform": "^11.0.3",
-    "module-deps": "^3.9.1",
     "optimist": "^0.6.1",
     "progress": "^1.1.8",
     "promise": "^7.0.4",
-    "react-timer-mixin": "^0.13.2",
-    "react-tools": "git://github.com/facebook/react#b4e74e38e43ac53af8acd62c78c9213be0194245",
-    "rebound": "^0.0.13",
     "regenerator": "^0.8.36",
     "sane": "^1.2.0",
     "semver": "^5.0.1",
     "source-map": "^0.4.4",
-    "stacktrace-parser": "^0.1.3",
-    "tinycolor2": "^1.1.2",
     "uglify-js": "^2.4.24",
     "underscore": "^1.8.3",
     "wordwrap": "^1.0.0",
     "worker-farm": "^1.3.1",
     "ws": "^0.8.0",
-    "yargs": "^3.24.0",
-    "yeoman-environment": "^1.2.7",
-    "yeoman-generator": "^0.20.3"
+    "yargs": "^3.24.0"
   },
   "devDependencies": {
-    "jest-cli": "0.5.7",
-    "babel-eslint": "4.1.1",
-    "eslint": "1.3.1",
-    "eslint-plugin-react": "3.3.1",
-    "portfinder": "0.4.0",
-    "temp": "0.8.3"
+    "babel-eslint": "^4.1.3",
+    "eslint": "^1.5.1",
+    "jest-cli": "^0.5.8",
+    "portfinder": "^0.4.0"
   }
 }
